--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -1105,6 +1105,7 @@ work presented here of optimising programs written in the Accelerate language.
 
 
 \section{Sparse-matrix vector multiplication}
+\label{sec:smvm}
 
 \marginnote{tk: redo bechmarks}
 \newcommand\spyplot[1]{\parbox[c][1.1cm][c]{1.1cm}{\includegraphics[width=1cm]{images/sec-6/smvm/#1}}}
