--- a/sections/05-optimisation.tex
+++ b/sections/05-optimisation.tex
@@ -1,5 +1,6 @@
 
 \chapter{Optimising Embedded Array Programs}
+\label{ch:optimising}
 \epigraph{Relax. As usual, I will bore you with the details.}%
 {\textsc{---chris lee}}
 
