--- a/preamble.tex
+++ b/preamble.tex
@@ -237,14 +237,30 @@
     style=haskell,
     frame=none,
     numbers=none,
-    basicstyle=\ttfamily
+    basicstyle=\ttfamily,
+    literate=
+        {\\}{{$\lambda$}}1
+        {\\\\}{{\char`\\\char`\\}}1
+        {>->}{>->}3
+        {>>=}{>>=}3
+        {->}{{$\rightarrow$\space}}3    % include forced space
+        {>=}{{$\geq$}}2
+        {<-}{{$\leftarrow$}}2
+        {<=}{{$\leq$}}2
+        {=>}{{$\Rightarrow$}}2
+        {|}{{$\mid$}}1
+        {forall}{{$\forall$}}1
+        {exists}{{$\exists$}}1
+        {...}{{$\cdots$}}3
 }
 
 
 % Shorthand for inline code fragments
 %
-\newcommand{\code}[1]{\lstinline[style=inline]{#1}}
-\newcommand{\footcode}[1]{\lstinline[style=inline]{#1}}
+\newcommand{\code}[1]{\lstinline[style=inline];#1;}
+\newcommand{\footcode}[1]{\lstinline[style=inline];#1;}
+
+\lstMakeShortInline[style=inline]@
 
 
 % Chapter page style
