--- a/preamble.tex
+++ b/preamble.tex
@@ -296,7 +296,7 @@
 % TK: the abbrevs package doesn't work as advertised, and puts as space before a trailing period as
 % well. This is bad so needs to be undone. \:
 %
-\newabbrev\AST  {AST\index{abstract-syntax tree}}
+\newabbrev\AST  {AST\index{abstract syntax tree}}
 \newabbrev\CUDA {CUDA\index{CUDA}}
 \newabbrev\GPU  {GPU\index{graphics processing unit}}
 \newabbrev\HOAS {HOAS\index{higher-order abstract syntax}}
