--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -2,7 +2,7 @@
 % analysis, example programs
 %
 
-\chapter{Applications and Benchmarks}
+\chapter{Results}
 \label{ch:results}
 % \epigraph{Dionysus [is] the Master of Illusions, who could make a vine grow
 % out grow out of a ship's plank, and in general enable his votaries to see the
